--- a/style.css
+++ b/style.css
@@ -45,3 +45,26 @@
 
     background-color: yellow;
 }
+
+#grid{
+
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    width: 15%;
+}
+
+.numbers{
+
+    width: 50px;
+    height: 50px;
+    background-color: teal;
+    border: 1px solid;
+   
+}
+
+#calculatorTwo{
+
+    width: 25%;
+    background-color: orange;
+}
