--- a/style.css
+++ b/style.css
@@ -65,6 +65,19 @@
 
 #calculatorTwo{
 
-    width: 25%;
+    width: 10%;
     background-color: orange;
+    height: 120px;
+    border-style: groove;
+    border-color: gray;
+}
+
+.number{
+
+    background-color: lightgrey;
+}
+
+.math{
+
+    background-color: grey;
 }
